--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ dependencies = [
     "flask>=3.1.1",
     "markdown>=3.8",
     "markdownify>=1.1.0",
+    "numpy>=2.3.0",
     "python-dotenv>=1.1.0",
     "requests>=2.32.4",
+    "tqdm>=4.67.1",
 ]
